# AntennaEducator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  aws-admin-verify-user.ps1  buildspec-deploy.yml  buildspec-fdtd-deploy.yml  buildspec-fdtd-test.yml  buildspec-test.yml  cognito-admin-policy.json  configure-lambda-auth.ps1  deploy-auth-to-aws.ps1  deploy-fdtd-frontend.ps1  deploy-frontend.ps1  dipole_test.json  docker-compose.yml  eslint_output.txt  pyproject.toml  requirements.txt  test-auth-aws.ps1  test-health.ps1  test_auth_flow.ps1  test_aws_auth.ps1  test_aws_registration_flow.ps1  test_docker_auth.ps1  test_dynamodb_local.py  test_e2e.py
.github/: CODEOWNERS  copilot-instructions-fdtd.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: aws-build-and-merge.yml  fdtd-build-and-deploy.yml  pr-checks.yml
.vite/vitest/: results.json
backend/: Dockerfile  README.md  __init__.py
backend/auth/: .env.example  Dockerfile  Dockerfile.lambda  README.md  main.py  requirements.txt  schemas.py
backend/common/: README.md  __init__.py  constants.py
backend/fdtd_postprocessor/: Dockerfile.lambda  __init__.py  config.py  far_field.py  field_extraction.py  lambda_handler.py  main.py  schemas.py
backend/fdtd_preprocessor/: Dockerfile.lambda  __init__.py  builders.py  config.py  lambda_handler.py  main.py  schemas.py
backend/postprocessor/: Dockerfile.lambda  README.md  __init__.py  config.py  field.py  lambda_handler.py  main.py  models.py  pattern.py
backend/preprocessor/: Dockerfile.lambda  README.md  __init__.py  builders.py  config.py  lambda_handler.py  main.py  schemas.py
backend/projects/: .env.example  .gitignore  Dockerfile  Dockerfile.lambda  README.md  __init__.py  auth.py  cognito_service.py  database.py  documentation_service.py  folder_routes.py  jwt_middleware.py  lambda_handler.py  local_auth_service.py  main.py  models.py  pytest.ini  requirements.txt  results_service.py  schemas.py  storage.py  submission_routes.py  test_projects_api.py
backend/solver/: Dockerfile.lambda  README.md  __init__.py  config.py  gauss_quadrature.py  geometry.py  inductance.py  lambda_handler.py  main.py  models.py  potential.py  potential_nodal.py  resistance.py  schemas.py  solver.py  system.py
backend/solver_fdtd/: Dockerfile.lambda  __init__.py  boundaries.py  config.py  engine_1d.py  engine_2d.py  engine_3d.py  engine_common.py  lambda_handler.py  main.py  postprocess.py  probes.py  schemas.py  sources.py
backend/solver_fem/: __init__.py  config.py  main.py
backend/solver_mom/: __init__.py  config.py  main.py
deployment/: README.md
deployment/nginx/: nginx.conf
deployment/postgres/: init.sql
deployment/prometheus/: prometheus.yml
dev_tools/: README.md  __init__.py  check_services.ps1  debug_geometry.py  deploy_api_gateway.ps1  deploy_cognito.ps1  emergency_disable.ps1  emergency_restore.ps1  lumped_element_examples.py  migrate_add_user_approval_fields.py  rebuild_fdtd_lambda_images.ps1  rebuild_lambda_images.ps1  run_integration_tests.ps1  seed_fdtd_demo_projects.py  setup_dynamodb_local.py  start_all_services.ps1  start_backend.ps1  start_backend_windows.ps1  start_solver_service.ps1  test_api_debug.py  test_api_gateway.ps1  test_aws_pipeline.py  test_backend_quick.ps1  test_cognito.ps1  test_current_source_golden.py  test_dipole_api.ps1  test_dynamodb.py  test_far_field_api.ps1  test_farfield_direct.py  test_farfield_full_dipole.py  test_farfield_simple.py  test_field_computation_workflow.py  test_from_debug_json.py  test_http_direct.py  test_incremental_postprocessing.py  test_multi_antenna_api.ps1  test_multi_antenna_frontend.ts  test_postprocessing_comprehensive.py  test_postprocessing_features.ps1  test_postprocessing_integration.py  (+8 more)
dev_tools/visualization/: __init__.py  run_visualization_demo.py  save_dipole_plot.py  test_3d_viz.py  view_all_antennas.py  view_dipole.py  visualization.py  visualize_example.py
docs/: .gitignore  AWS_DEPLOYMENT.md  AWS_MVP_DEPLOYMENT_PLAN.md  AWS_PHASE2_SCALING_PLAN.md  BACKEND_IMPLEMENTATION.md  FDTD_GUIDE.md  FDTD_IMPLEMENTATION_PLAN.md  FEM_INTEGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_3_SUBPROJECTS.md  LOCAL_DEVELOPMENT.md  OPENCFS_ANALYSIS.md  REFERENCE_VERIFICATION.md
docs/archive/: AWS_MVP_DEPLOYMENT_PLAN.md  PHASE_C_COGNITO_GUIDE.md  SOLVER_SERVICE_COMPLETE.md  TASK_C1_COMPLETE.md  TASK_C1_DEPLOYMENT_COMPLETE.md  TESTING_COMPLETE.md
frontend/: .dockerignore  .env.development  .env.production  .env.template  .eslintrc.cjs  .gitignore  Dockerfile  README.md  auth-test-script.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest_out.txt
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
scripts/: deploy.ps1  deploy.sh  init-local.ps1  init-local.sh  init_local_db.py  promote.ps1
terraform/: backend-config.txt
terraform/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
tests/: .gitignore  conftest.py  run_comprehensive_tests.py  run_critical_tests.py  test_complete_farfield_flow.py  test_halfwave_dipole_complete.py  test_port_parameters.py  test_skin_effect.py  test_two_monopoles_multi_antenna.py
tests/integration/: README.md  test_auth_refactored.py  test_complete_farfield_flow.py  test_complete_solver_workflow.py  test_current_source_golden.py  test_halfwave_dipole_complete.py  test_halfwave_dipole_preprocessor_path.py  test_incremental_postprocessing.py  test_multi_antenna_api.py  test_preprocessor_solver_pipeline.py  test_solver_field_integration.py  test_two_monopoles_multi_antenna.py  test_unified_auth_endpoints.py
tests/unit/: test_admin_tokens.py  test_appended_nodes.py  test_auth_hardening.py  test_builders_edge_cases.py  test_cognito_provider.py  test_compute_auth.py  test_constants.py  test_course_enrollment.py  test_custom_builder.py  test_dipole_builder.py  test_documentation_endpoints.py  test_models.py  (+49 more)
(+464 files in other folders)
