[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "antenna-simulator"
version = "0.1.0"
description = "Cloud-native antenna simulation platform"
authors = [
    {name = "Paul Baumgartner", email = "baumg.paul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["antenna", "simulation", "peec", "electromagnetics", "hf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "fastapi>=0.104.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.4.0",
    "isort>=5.12.0",
]

aws = [
    "boto3>=1.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["deployment*", "tests*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E741",   # ambiguous variable name — physics convention (I, l, Z, etc.)
    "E402",   # module-import-not-at-top — needed in tests with sys.path manipulation
    "E501",   # line-too-long — Black handles line length
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]   # unused variables common in test setup
"dev_tools/**" = ["F841", "E402"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "-ra",
    "--tb=short",
]
markers = [
    "critical: Critical tests that must pass (gold standard tests like halfwave dipole)",
    "solver: Tests related to the PEEC solver core functionality",
    "multi_antenna: Tests for multi-antenna solver functionality",
    "unit: Unit tests",
    "integration: Integration tests combining multiple components",
    "e2e: End-to-end tests",
    "slow: Tests that take significant time to execute",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
